Proinsure/css/style.css
/*  grey : #6e6b74  
    second color : #2D2640
    */
    @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
*{
    font-size: 1rem;
    font-family: sans-serif;
    margin: 0;
}
body{
    color:#6e6b74;
    background-color: #fff;
}


.container{
    width: 95%;
    max-width: 1200px;
    margin: auto;
}

/* ===== header ===== */
header{
    background-color: #fff;

}

header .container {
    display: flex;
    justify-content: space-between;
    align-items:center;
    padding: 1em 0em;
}

.logo > a {
    font-size: 2.2rem;
    font-family: 'karla';
    font-weight: 700;
    color: #2D2640;
    text-decoration: none;
}

header  nav >  ul{
    padding: 0;
    list-style: none;
    display:flex;
    flex-direction: row;
    border: 1px solid greenyellow;
}

header  nav li{
    padding: 1em 1.5em;
}

header div > nav li:last-child{
    padding-right: 0em;
}


.view-plans{
    padding: 1em;
    border: 1px solid #2D2640;
}


.view-plans:hover,
.view-plans:active{

    color:#fff;
    background-color: #2D2640;
}



header div > nav a{
    font-size: 1.2rem;
    text-transform: uppercase;
    text-decoration: none;
    font-weight: 600;
    color:#6e6b74;
}

header div > nav a:hover,
header div > nav a:active
{
    color: #2D2640;
}


/* ==== Menu ====*/




/* ===== hero ===== */

.hero{
    background-color: #2D2640;
    padding: 4em 0em;
    color: white;
}

.hero > .container{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.hero-content{
    width: 50%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}


.hero-img{
    width: 50%;
    min-width:300px;
    max-width: 400px;

}

.hero-img > img{
    width: 100%;
    border-radius: 10px;
}

.hero-content-title{
    font-size: 3.5rem;
    font-family: 'karla';
    padding: 0.5em 0;
    border-top: 2px solid #fff;

}

.hero-content-description{
    line-height: 2em;
    font-size: 1.2em;
    opacity: 0.8;
    max-width: 500px;
}

.hero-content > a{
    padding: .8em .75em;
    font-size: 1.3em;
    text-transform: uppercase;
    text-decoration: none;
    border: 1.5px solid #ffffff;
    border-radius: 5px;
    color: #fff;
    width: fit-content;
    font-weight: 600;
}

.hero-content > a:hover,
.hero-content > a:active{

    color: #2D2640;
    background-color: #fff;
}


/* ===== About =====*/

.about{
    margin: 8em 0;
}

.about > .container{
    display: flex;
    flex-direction: row;

}

.about .about-img{
    width: 50% ;
}

.about .about-img > img{
    width: 100%;
    min-width:300px;
    max-width: 500px;
}

.about-content{
    width: 50% ;
    padding: 0 4em;
    display: flex;
    flex-direction: column;
    justify-content: center;
    box-sizing: border-box;
}

.about-content h2{
    font-size: 3rem;
    font-family: 'karla';
    color: #2D2640;
    margin-bottom: .7em;
}


.about-content p{
    color: #6e6b74;
    margin-bottom: .7em;
    font-size: 1.2rem;
    line-height: 30px;
    margin-bottom: 1.3em;
}

.about-content a{
    font-size: 1.2rem;
    text-transform: capitalize;
    text-decoration: none;
    font-weight: 600;
    color:#6e6b74;
    width: fit-content;
    display: inline-block;
}

.about-content a:hover,
.about-content a:active{
    color:#fff;
    background-color: #2D2640;
}

/* ===== Feature =====*/


.feature-parent-title{
    font-size: 3rem;
    font-family: 'karla';
    color: #2D2640;
    font-weight: 700;
    padding-top: .3em;
    border-top: 2px solid #6e6b74;
}

.feature-cols{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 3em 0em;
}


.icon-box{
    width: 50px;
    aspect-ratio: 1 / 1;
    background-color: #8ab4f0;
    text-align: center;
    position: relative;
    border-radius: 50px;
    margin-bottom: 2em;
}

.icon-box i {
    position: absolute;
    top: 50%;
    transform: translate(-50%,-50%);
    color:#fff;
}


.feature-col-title{
    font-size: 2rem;
    font-family: 'karla';
    color: #2D2640;
    margin-bottom: .5em;
    font-weight: 700;
    text-transform: capitalize;
}

.feature-col-parag{
    line-height: 25px;
}

/* ===== Contact =====*/


.contact .container{
    box-sizing: border-box;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    background-color: #2D2640;
    padding: 6em 4rem;
}

.contact-title{
    font-size: 3rem;
    font-family: 'karla';
    color: white;
}


.contact-btn{
    padding: .8em .75em;
    font-size: 1.2em;
    text-transform: uppercase;
    text-decoration: none;
    border: 1.5px solid #ffffff;
    border-radius: 3px;
    color: #fff;
    width: fit-content;
    font-weight: 600;
}

.contact-btn:hover,
.contact-btn:active
{
    color: #2D2640;
    background-color: #fff;
}

/* ===== bottom nav =====*/
.bottom-nav .container{
    padding-top: 4em;
}
.bottom-nav-primary{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    border-bottom: 1px solid #6e6b74;
}

.bottom-nav-primary-social{
    display: flex;
    gap: 20px;
}
.bottom-nav-primary-social i{
    color: #2D2640;
}
.bottom-nav-primary-title{
    font-size: 2.2rem;
    font-family: 'karla';
    font-weight: 700;
    color: #2D2640;
}


.bottom-nav-secondary nav  ul{
    padding: 0;
    list-style: none;
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.bottom-nav-secondary nav li{
    padding: 2em;
}


.bottom-nav-secondary nav a{
    font-size: 1.3rem;
    text-transform: capitalize;
    text-decoration: none;
    color:#6e6b74;
    letter-spacing: 1px;
}


.bottom-nav-secondary nav a:hover,
.bottom-nav-secondary nav a:active{
    color:#2D2640;
}

/* ===== footer =====*/
footer{
    background-color: #2D2640;
}
footer .container{
    text-align: center;
    padding: 2.2em;
    box-sizing: border-box;

}

footer .container p{
    font-size: 1.2rem;
    color: #cbc9c9;
}


/* ===== Media queries =====*/

@media(max-width:860px){
    .hero .container{
        flex-direction: column;
        align-items: center;
    }
    .hero-content{
        width: 100%;
        align-items: center;
        text-align: center;
    }
    .hero-img{
        width: 100%;
        margin-top: 3em;
    }
    .hero-content-description{
        line-height: 2em;
        font-size: 1.2em;
        opacity: 0.8;
        max-width: 600px;
    }

    .hero-content-description{
        max-width: 600px;
    }

    .hero-content > a{
    margin-top: 1.5em;
    }


    /* ===== about ===== */
    .about .container{
        flex-direction: column;
        align-items: center;
    }

    .about-img{
        width: 100% !important;
        min-width:300px;
        max-width: 400px;
        order: 2;

        }

    .about-img img{
        width: 100%;
        min-width: auto !important;

    }

    .about-content{
        width: 100%;
        text-align: center;
        order: 1;
    }

    .about-content a{
        text-align: center;
        margin: 1.5em auto;

    }

    .about-content p{
        max-width: 600px;
        margin: auto;
    }

    .feature-cols{
        flex-direction: column;
        text-align: center;
    }

    .feature-col{
        margin-bottom: 3em;
    }
    .icon-box{
        margin: 0 auto;
        margin-bottom: 1em;
    }
    .contact .container{
        text-align: center;
        display: flex;
        flex-direction: column;
    }

    .contact-btn{
        margin-top: 1em;
    }


    header > .container {
        flex-direction: column;
    }

    .bottom-nav-secondary nav ul  {
        display: flex;
        flex-wrap: wrap;
        text-align: center;
    }

    .bottom-nav-secondary nav ul li  {
        flex: 30%;
        padding:1em;
    }
}

